Fix align texts

--- a/app/assets/stylesheets/layout/_landing-page.scss
+++ b/app/assets/stylesheets/layout/_landing-page.scss
@@ -71,7 +71,7 @@ html, body {
     &-image {
       float: left;
       height: 200px;
-      margin-right: 60px;
+      margin-right: 90px;
     }
   }
 
